# gw_2025_b3_2_1

./: .env.example  .gitignore  DEPLOY_README.md  README.md  app.py  check_output.py  lambda_function.py  load_resource.py  pyproject.toml  requirements.txt  slack_handler.py
.github/workflows/: deploy-lambda.yml
bibtex/: acl_parser.py  article_parser.py  arxiv_parser.py  inproceedings_parser.py  jnlp_parser.py  simplify.py  utils.py
bibtex/middleware/: formatter.py  quotestylemiddleware.py  title_formatter.py
lib/: bibtexparser_fork-2.0.0b8-py3-none-any.whl
resources/: journal_names.json  venue_abbreviations.json  venue_abbreviations.toml
tests/: test_add_abbreviated_fields.py  test_build_short_venue.py  test_clean_venue.py  test_parse.py  test_parse_bibtex_entries.py  test_simplify.py  test_title.py  test_title_latex_behavior.py  test_title_latex_warning.py
